--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html lang="en">
 
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
     <script src="./dist/main.js"></script>
-    <title>Battlefield: Tanks</title>
-  </head>
+    <title>Battleship: Tanks</title>
+</head>
 
-  <body>
-        <div id="main">Hello from index.html. Something went wrong</div>
-  </body>
+<body>
+    <canvas id="game-canvas"></canvas>
+</body>
 
 </html>
