Still Working On Animations and Work On UI

--- a/index.html
+++ b/index.html
@@ -7,9 +7,28 @@
             <link rel="stylesheet" href="./dist/main.css" />
             <script src="./dist/main.js"></script>
             <title>Battleship: Tanks</title>
+            <script src="https://kit.fontawesome.com/ec8e6eca3d.js" crossorigin="anonymous"></script>
         </head>
 
         <body>
+            <header>
+                    <h1>Battlefield: Tanks
+                        <div class="icons">
+                            <a href="https://github.com/Helionster" target="_blank"><i class ="fa-brands fa-github" style="color: white;"></i></a>
+                            <a href="https://www.linkedin.com/in/jason-zhang-344777184/" target="_blank"><i class ="fa-brands fa-linkedin" style="color: white;"></i></a>
+                        </div>
+                    </h1>
+            </header>  
+
             <canvas id="game-canvas"></canvas>
+            <canvas id="healthCanvas" width="400" height="60"></canvas>
+
+            <div class="left-block"></div>
+            <div class="right-block"></div>
+
+            <div class="health-bar">
+                <div class="health"></div>
+            </div>
+
         </body>
     </html>
