--- a/index.html
+++ b/index.html
@@ -8,27 +8,49 @@
             <script src="./dist/main.js"></script>
             <title>Battleship: Tanks</title>
             <script src="https://kit.fontawesome.com/ec8e6eca3d.js" crossorigin="anonymous"></script>
+            <link rel="icon" type="image/png" href="favicon.png">
         </head>
 
         <body>
             <header>
-                    <h1>Battlefield: Tanks
-                        <div class="icons">
-                            <a href="https://github.com/Helionster" target="_blank"><i class ="fa-brands fa-github" style="color: white;"></i></a>
-                            <a href="https://www.linkedin.com/in/jason-zhang-344777184/" target="_blank"><i class ="fa-brands fa-linkedin" style="color: white;"></i></a>
+                <h1>Battlefield: Tanks
+                    <div class="icons">
+                        <a href="https://github.com/Helionster" target="_blank"><i class ="fa-brands fa-github" style="color: white;"></i></a>
+                        <a href="https://www.linkedin.com/in/jason-zhang-344777184/" target="_blank"><i class ="fa-brands fa-linkedin" style="color: white;"></i></a>
+                    </div>
+                </h1>
+            </header>
+
+            <div class="container">
+                <div class="left-block">
+                    <audio controls loop> <source src="Music.wav"></audio>
+
+                    <div class="instructions">
+                        Controls
+                    </div>
+                </div>
+
+                <div class="middle-block">
+                    <canvas id="game-canvas"></canvas>
+                    <div class="bottom-block">
+                        
+                        <div class="angle">
+                            <div class="anglename">Angle</div>
+                            <img src="../sprites/assets/Arrow.png" id="arrow">
                         </div>
-                    </h1>
-            </header>  
 
-            <canvas id="game-canvas"></canvas>
-            <canvas id="healthCanvas" width="400" height="60"></canvas>
+                        <div class="power">
+                            <div class="powername">Power</div>
+                            <div id="actualpower">25</div>
+                        </div>
+                    </div>
+                </div>
 
-            <div class="left-block"></div>
-            <div class="right-block"></div>
-
-            <div class="health-bar">
-                <div class="health"></div>
+                <div class="right-block">
+                    <div class="instructions">
+                        Movement
+                    </div>
+                </div>
             </div>
-
         </body>
     </html>
