--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                     <audio controls loop> <source src="Music.wav"></audio>
 
                     <div class="instructions">
-                        Controls
+                        To Fire:
+                        Use W and S Keys to change angles. Use Q and E Keys to change power. To Fire, use the space bar.
                     </div>
                 </div>
 
@@ -48,7 +49,13 @@
 
                 <div class="right-block">
                     <div class="instructions">
-                        Movement
+                        Movement: 
+                        Use A and D keys to move left and right respectively. 
+                    </div>
+
+                    <div class="win-condition">
+                        Objective: 
+                        Shoot projectiles by altering the angle and power indicators to damage the enemy and reduce the red bar at the top of the page to zero, black bar.
                     </div>
                 </div>
             </div>
